# mvp_v2

./: README.md  foundlab_collection_with_auth.json
.github/workflows/: ci_cd.yml
foundlab-backend/: .env.example  .gitignore  AGENT.md  Dockerfile  Makefile  deploy.py  destroy.sh  docker-compose.yml  foundlab_collection.json  init.py  pyproject.toml
foundlab-backend/app/: config.py  database.py  main.py
foundlab-backend/app/common/: health.py
foundlab-backend/app/middleware/: request_context_middleware.py
foundlab-backend/app/models/: audit_log.py  base.py  dfc.py  gas_monitor.py  nft.py  risk.py  score.py  sherlock.py
foundlab-backend/app/repositories/: score_repository.py
foundlab-backend/app/routers/: audit_router.py  dfc_router.py  gas_monitor_router.py  nft_router.py  risk_router.py  score_router.py  sherlock_router.py
foundlab-backend/app/services/: audit_log_service.py  dfc_service.py  gas_monitor_service.py  nft_service.py  risk_service.py  score_service.py  sherlock_service.py
foundlab-backend/app/static/: audit_panel.html
foundlab-backend/app/utils/: mongodb_helpers.py  score_calculator.py
foundlab-backend/tests/: conftest.py  test_dfc.py  test_gas_monitor.py  test_health.py  test_nft.py  test_risk.py  test_score.py  test_sherlock.py
tests/: test_middleware.py
